--- a/docks.html
+++ b/docks.html
@@ -288,7 +288,7 @@
         <!-- Hero Banner Section End -->
 
         <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3 ">
+        <section class="about-section my-lg-5 my-3 pb-lg-5">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
@@ -349,7 +349,7 @@
         <!-- Hart Fabrication Section End -->
 
         <!-- Hoist & Barge Section Start -->
-        <section class="about-section my-lg-5 my-3 hoist-section">
+        <section class="about-section my-lg-5 my-3 pt-lg-5 hoist-section">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
@@ -383,9 +383,9 @@
 
         <!-- Services Provided Section Start -->
         <section class="pt-lg-5 pt-3 services-provided-section">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-lg-10">
+            <div class="">
+                <div class="row justify-content-center m-0">
+                    <div class="container-starboard">
 
                         <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">SERVICES</h2>
@@ -461,43 +461,48 @@
         <!-- moreinfo Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section" id="form-docks-section">
+        <section class="py-lg-5 py-3 request-service-section border-top" id="form-docks-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="text-center mb-5">
+                    <div class="col-lg-11 p-lg-0">
+                        <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">Dock Solutions inquiry</h2>
                         </div>
-                        <form action=javascript:void(0) class="request-service-form">
-                            <div class="row">
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="First Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Last Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="request-form-input" placeholder="Email">
-                                </div>
-                                <div class="col-12">
-                                    <input type="tel" class="request-form-input" placeholder="Phone">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Zip Code">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="request-form-input" rows="5" placeholder="Comments"></textarea>
-                                </div>
-                                <div class="col-12 text-center mt-3">
-                                    <button type="submit" class="btn-global border-0">Send Request</button>
-                                </div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6">
+                                <form action=javascript:void(0) class="request-service-form">
+                                    <div class="row px-lg-3">
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="First Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Last Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="email" class="request-form-input" placeholder="Email">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="tel" class="request-form-input" placeholder="Phone">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Zip Code">
+                                        </div>
+                                        <div class="col-12">
+                                            <textarea class="request-form-input" rows="5" placeholder="Comments"></textarea>
+                                        </div>
+                                        <div class="col-12 text-center mt-3">
+                                            <button type="submit" class="btn-global border-0">Send Request</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Request Service Form End -->
+
 
     </main>
 
