--- a/gold-star-membership.html
+++ b/gold-star-membership.html
@@ -287,7 +287,7 @@
         <!-- Hero Banner Section End -->
 
         <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3 ">
+        <section class="about-section my-lg-5 my-3 goldstar-sec">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
@@ -319,7 +319,7 @@
 
 
         <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3">
+        <section class="about-section my-lg-5 my-3 goldstar-sec">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
@@ -378,9 +378,9 @@
 
         <!-- Services Provided Section Start -->
         <section class="py-lg-5 py-3 services-provided-section">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-lg-10">
+            <div class="">
+                <div class="row justify-content-center m-0">
+                    <div class="container-starboard">
 
                         <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">Benefits of membership</h2>
@@ -418,7 +418,7 @@
         <!-- Services Provided Section End -->
 
         <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3 ">
+        <section class="about-section my-lg-5 my-3 goldstar-sec">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
@@ -447,7 +447,7 @@
         <!-- Our Docks & Lifts Section End -->
 
         <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3">
+        <section class="about-section my-lg-5 my-3 goldstar-sec">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
