--- a/index.html
+++ b/index.html
@@ -343,67 +343,100 @@
                         <div class="section-header text-center mb-50">
                             <h2 class="section-title">RECENTLY ADDED INVENTORY</h2>
                         </div>
-                        <div class="row">
+                        <div class="inventory-carousel owl-carousel owl-theme">
                             <!-- Inventory Card 1 -->
-                            <div class="col-lg-3 col-md-6 mb-4">
+                            <div class="item">
                                 <a href=javascript:void(0) class="inventory-card d-block">
                                     <div class="inventory-img">
-                                        <img src="./assets/images/home/dummycard.png" alt="Year Make Model">
+                                        <img src="./assets/images/home/tahoe.png" alt="2024 Tahoe 215 S">
                                     </div>
                                     <div class="inventory-info">
-                                        <h3 class="inventory-name">Year Make Model</h3>
+                                        <h3 class="inventory-name">2024 Tahoe 215 S</h3>
                                         <div class="inventory-meta">
-                                            <span class="price">$199,900</span>
+                                            <span class="price">$52,900</span>
                                             <span class="divider">|</span>
-                                            <span class="monthly">$7,594/mo*</span>
+                                            <span class="monthly">$425/mo*</span>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                             <!-- Inventory Card 2 -->
-                            <div class="col-lg-3 col-md-6 mb-4">
+                            <div class="item">
                                 <a href=javascript:void(0) class="inventory-card d-block">
                                     <div class="inventory-img">
-                                        <img src="./assets/images/home/dummycard.png" alt="Year Make Model">
+                                        <img src="./assets/images/home/mirrocraft.png" alt="2024 MirroCraft 1667">
                                     </div>
                                     <div class="inventory-info">
-                                        <h3 class="inventory-name">Year Make Model</h3>
+                                        <h3 class="inventory-name">2024 MirroCraft 1667</h3>
                                         <div class="inventory-meta">
-                                            <span class="price">$199,900</span>
+                                            <span class="price">$28,500</span>
                                             <span class="divider">|</span>
-                                            <span class="monthly">$7,594/mo*</span>
+                                            <span class="monthly">$215/mo*</span>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                             <!-- Inventory Card 3 -->
-                            <div class="col-lg-3 col-md-6 mb-4">
+                            <div class="item">
                                 <a href=javascript:void(0) class="inventory-card d-block">
                                     <div class="inventory-img">
-                                        <img src="./assets/images/home/dummycard.png" alt="Year Make Model">
+                                        <img src="./assets/images/home/bayview.png" alt="2024 Bayview 2400">
                                     </div>
                                     <div class="inventory-info">
-                                        <h3 class="inventory-name">Year Make Model</h3>
+                                        <h3 class="inventory-name">2024 Bayview 2400</h3>
                                         <div class="inventory-meta">
-                                            <span class="price">$199,900</span>
+                                            <span class="price">$74,900</span>
                                             <span class="divider">|</span>
-                                            <span class="monthly">$7,594/mo*</span>
+                                            <span class="monthly">$585/mo*</span>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                             <!-- Inventory Card 4 -->
-                            <div class="col-lg-3 col-md-6 mb-4">
+                            <div class="item">
                                 <a href=javascript:void(0) class="inventory-card d-block">
                                     <div class="inventory-img">
-                                        <img src="./assets/images/home/dummycard.png" alt="Year Make Model">
+                                        <img src="./assets/images/home/tahoe.png" alt="2023 Alumacraft Trophy 185">
                                     </div>
                                     <div class="inventory-info">
-                                        <h3 class="inventory-name">Year Make Model</h3>
+                                        <h3 class="inventory-name">2023 Alumacraft Trophy 185</h3>
                                         <div class="inventory-meta">
-                                            <span class="price">$199,900</span>
+                                            <span class="price">$45,000</span>
                                             <span class="divider">|</span>
-                                            <span class="monthly">$7,594/mo*</span>
+                                            <span class="monthly">$350/mo*</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Inventory Card 5 -->
+                            <div class="item">
+                                <a href=javascript:void(0) class="inventory-card d-block">
+                                    <div class="inventory-img">
+                                        <img src="./assets/images/home/tahoe.png" alt="2024 Tahoe 2585 Cascade">
+                                    </div>
+                                    <div class="inventory-info">
+                                        <h3 class="inventory-name">2024 Tahoe 2585 Cascade</h3>
+                                        <div class="inventory-meta">
+                                            <span class="price">$89,900</span>
+                                            <span class="divider">|</span>
+                                            <span class="monthly">$695/mo*</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Inventory Card 6 -->
+                            <div class="item">
+                                <a href=javascript:void(0) class="inventory-card d-block">
+                                    <div class="inventory-img">
+                                        <img src="./assets/images/home/mirrocraft.png"
+                                            alt="2024 MirroCraft Dual Impact">
+                                    </div>
+                                    <div class="inventory-info">
+                                        <h3 class="inventory-name">2024 MirroCraft Dual Impact</h3>
+                                        <div class="inventory-meta">
+                                            <span class="price">$39,900</span>
+                                            <span class="divider">|</span>
+                                            <span class="monthly">$310/mo*</span>
                                         </div>
                                     </div>
                                 </a>
