--- a/mission-statement.html
+++ b/mission-statement.html
@@ -308,8 +308,6 @@
         </section>
         <!-- Our Mission Statement Section End -->
 
-
-
         <!-- Our Vision Section Start -->
         <section class="about-section our-visionsec my-lg-5 my-3">
             <div class="container px-0">
@@ -337,7 +335,7 @@
         <!-- Our Vision Section End -->
 
         <!-- Our Values Section Start -->
-        <section class="about-section my-lg-5 my-3">
+        <section class="about-section my-lg-5 my-3 py-lg-5 py-3 goldstar-sec">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
@@ -367,6 +365,97 @@
             </div>
         </section>
         <!-- Our Values Section End -->
+
+        <!-- More Info Section Start -->
+        <section class=" py-lg-5 py-3 px-2">
+            <div class="container px-0">
+                <div class="row no-gutters align-items-center">
+                    <div class="col-lg-12 ">
+                        <p class="text-center">
+                            Call us today at <a class="text-decoration-none" href="tel:+12694144351">(269) 414-4351</a> and find out how our team can help you find the pontoon or fishing boat you’ve been looking for! We look forward to the opportunity to serve you.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- moreinfo Section End -->
+
+        
+        <!-- Services Provided Section Start -->
+        <section class="py-lg-5 py-3 services-provided-section moreinfo storage-about my-lg-5 my-3">
+            <div class="container-fluid px-lg-5">
+                <div class="row justify-content-center">
+                    <div class="col-lg-11">
+                        <div class="text-center mb-lg-5 mb-3">
+                            <h2 class="section-title-alt">WHY PURCHASE FROM YOUR LOCAL DEALER?</h2>
+                        </div>
+                        <div class="row">
+                            <!-- Convenience -->
+                            <div class="col-lg-3 col-md-6 mb-lg-5 mb-3">
+                                <div class="parts-item text-lg-left text-center">
+                                    <div class="mb-4">
+                                        <img src="./assets/images/mission-statement/convenience-icon.svg" class=""
+                                            alt="Convenience">
+                                    </div>
+                                    <div>
+                                        <h3 class="services-item-title mb-3">Convenience</h3>
+                                        <p class="services-item-text">Close to home, your local dealer provides a wealth of knowledge regarding the product, as well as on-site inventory for you to tour and test drive prior to making your purchase.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Relationships -->
+                            <div class="col-lg-3 col-md-6 mb-lg-5 mb-3">
+                                <div class="parts-item text-lg-left text-center">
+                                    <div class="mb-4">
+                                        <img src="./assets/images/mission-statement/relationship-icon.svg" class=""
+                                            alt="Relationships">
+                                    </div>
+                                    <div>
+                                        <h3 class="services-item-title mb-3">Relationships</h3>
+                                        <p class="services-item-text">Purchasing locally allows you to establish a relationship with your dealer representative providing you with the convenience of service and support when you need it.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Service after the Sale -->
+                            <div class="col-lg-3 col-md-6 mb-lg-5 mb-3">
+                                <div class="parts-item text-lg-left text-center">
+                                    <div class="mb-4">
+                                        <img src="./assets/images/mission-statement/sale-service-icon.svg" class=""
+                                            alt="Service after the Sale">
+                                    </div>
+                                    <div>
+                                        <h3 class="services-item-title mb-3">Service after the Sale</h3>
+                                        <p class="services-item-text">Many dealers put their purchasing customers first when it comes to getting your coach serviced. You will experience the value your local dealer can add to your purchase.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Local Economy -->
+                            <div class="col-lg-3 col-md-6 mb-lg-5 mb-3">
+                                <div class="parts-item text-lg-left text-center">
+                                    <div class="mb-4">
+                                        <img src="./assets/images/mission-statement/economy-icon.svg" class=""
+                                            alt="Local Economy">
+                                    </div>
+                                    <div>
+                                        <h3 class="services-item-title mb-3">Local Economy</h3>
+                                        <p class="services-item-text">Local purchases help to keep tax dollars and people at work in your community.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="text-center">
+                            <a href="/contact.html" id="values-btn" class="btn-outline-global d-inline-flex">Contact Us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Services Provided Section End -->
 
     </main>
 
