--- a/parts.html
+++ b/parts.html
@@ -309,13 +309,13 @@
 
         <!-- Services Provided Section Start -->
         <section class="py-lg-5 py-3 services-provided-section">
-            <div class="container-fluid">
+            <div class="container-fluid px-lg-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-11">
                         <div class="row">
                             <!-- Genuine Parts & Trusted Accessories -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="parts-item">
                                     <div class="mb-4">
                                         <img src="./assets/images/parts/genuine.png" class=""
                                             alt="Genuine Parts & Trusted Accessories">
@@ -332,7 +332,7 @@
                             </div>
                             <!-- Knowledgeable Support, No Guessing -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="parts-item">
                                     <div class="mb-4">
                                         <img src="./assets/images/parts/support.png" class=""
                                             alt="Knowledgeable Support, No Guessing">
@@ -349,7 +349,7 @@
                             </div>
                             <!-- Serving Edwardsburg & Beyond -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="">
+                                <div class="parts-item">
                                     <div class="mb-4">
                                         <img src="./assets/images/parts/serving.png" class=""
                                             alt="Serving Edwardsburg & Beyond">
@@ -377,48 +377,55 @@
         <section class="py-lg-5 py-3 request-service-section border-top" id="form-parts-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="text-center mb-5">
+                    <div class="col-lg-11 p-lg-0">
+                        <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">REQUEST PARTS</h2>
                         </div>
-                        <form action=javascript:void(0) class="request-service-form">
-                            <div class="row">
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="First Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Last Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="request-form-input" placeholder="Email">
-                                </div>
-                                <div class="col-12">
-                                    <input type="tel" class="request-form-input" placeholder="Phone">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Zip Code">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input"
-                                        placeholder="Boat Year Make and Model">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Part #(s)">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="request-form-input" rows="1"
-                                        placeholder="Part description(s)"></textarea>
-                                </div>
-                                <div class="col-12 text-center mt-3">
-                                    <button type="submit" class="btn-global border-0">Send Request</button>
-                                </div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6">
+                                <form action=javascript:void(0) class="request-service-form">
+                                    
+                                    <div class="row px-lg-3">
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="First Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Last Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="email" class="request-form-input" placeholder="Email">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="tel" class="request-form-input" placeholder="Phone">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Zip Code">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input"
+                                                placeholder="Boat Year Make and Model">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Part #(s)">
+                                        </div>
+                                        <div class="col-12">
+                                            <textarea class="request-form-input" rows="1"
+                                                placeholder="Part description(s)"></textarea>
+                                        </div>
+                                        <div class="col-12 text-center mt-3">
+                                            <button type="submit" class="btn-global border-0">Send Request</button>
+                                        </div>
+                                    </div>
+
+                                </form>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Request Service Form End -->
+
     </main>
 
 
