--- a/service.html
+++ b/service.html
@@ -328,9 +328,9 @@
 
         <!-- Services Provided Section Start -->
         <section class="py-lg-5 py-3 services-provided-section">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-lg-10">
+            <div class="row justify-content-center m-0">
+                <div class="container-starboard">
+                    <div class="">
 
                         <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">SERVICES PROVIDED</h2>
@@ -433,7 +433,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-2 order-1">
-                        <div class="about-img-wrapper">
+                        <div class="about-img-wrapper px-lg-0 px-2">
                             <img src="./assets/images/service/boat-storage.png" alt="Boat Storage"
                                 class="img-fluid w-100">
                         </div>
@@ -444,48 +444,56 @@
         <!-- About Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section" id="form-service-section">
+        <section class="py-lg-5 py-3 request-service-section border-top" id="form-service-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="text-center mb-5">
+                    <div class="col-lg-11 p-lg-0">
+                        <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">REQUEST SERVICE</h2>
                         </div>
-                        <form action=javascript:void(0) class="request-service-form">
-                            <div class="row">
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="First Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Last Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="request-form-input" placeholder="Email">
-                                </div>
-                                <div class="col-12">
-                                    <input type="tel" class="request-form-input" placeholder="Phone">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Zip Code">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input"
-                                        placeholder="Boat Year Make and Model">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="request-form-input" rows="5"
-                                        placeholder="Describe Service Needs"></textarea>
-                                </div>
-                                <div class="col-12 text-center mt-3">
-                                    <button type="submit" class="btn-global border-0">Send Request</button>
-                                </div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6">
+                                <form action=javascript:void(0) class="request-service-form">
+                                    
+                                    <div class="row px-lg-3">
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="First Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Last Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="email" class="request-form-input" placeholder="Email">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="tel" class="request-form-input" placeholder="Phone">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Zip Code">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input"
+                                                placeholder="Boat Year Make and Model">
+                                        </div>
+                                        <div class="col-12">
+                                            <textarea class="request-form-input" rows="5"
+                                                placeholder="Describe Service Needs"></textarea>
+                                        </div>
+                                        <div class="col-12 text-center mt-3">
+                                            <button type="submit" class="btn-global border-0">Send Request</button>
+                                        </div>
+                                    </div>
+                                    
+                                </form>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Request Service Form End -->
+
+
     </main>
 
 
