--- a/specials-details.html
+++ b/specials-details.html
@@ -277,7 +277,7 @@
         <section class="py-lg-5 py-3 mb-lg-5 mb-3">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-10">
+                    <div class="col-lg-12  mb-lg-5 mb-lg-4">
                         <div class="specials-details-img mb-lg-5 mb-4 text-center">
                             <img src="./assets/images/special-details/detail-img.png"
                                 alt="Mercury Win a New Outboard Giveaway!" class="img-fluid w-100">
