--- a/trade.html
+++ b/trade.html
@@ -282,7 +282,7 @@
             <img src="./assets/images/trade/hero-img.png" alt="Sell/Trade Your Boat" class="hero-bg-img">
             <div class="hero-overlay"></div>
             <div class="hero-content">
-                <h1 class="hero-title">Sell/Trade Your Boat</h1>
+                <h1 class="hero-title">Sell/Trade Your <br class="d-lg-block d-none"> Boat</h1>
                 <a href="#form-trade-section" id="trade-boat-btn" class="btn-global">Start Selling Your Boat</a>
             </div>
         </section>
@@ -320,7 +320,7 @@
 
         <!-- Services Provided Section Start -->
         <section class="py-lg-5 py-3 services-provided-section">
-            <div class="container-fluid">
+            <div class="container-fluid px-lg-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-11">
                         <div class="text-center mb-lg-5 mb-3">
@@ -329,7 +329,7 @@
                         <div class="row">
                             <!-- Tell Us About Your Boat -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="text-lg-left text-center">
+                                <div class="parts-item text-lg-left text-center">
                                     <div class="mb-4">
                                         <img src="./assets/images/trade/genuine.png" class=""
                                             alt="Tell Us About Your Boat">
@@ -345,7 +345,7 @@
                             </div>
                             <!-- Get a Fair Market Evaluation -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="text-lg-left text-center">
+                                <div class="parts-item text-lg-left text-center">
                                     <div class="mb-4">
                                         <img src="./assets/images/trade/support.png" class=""
                                             alt="Get a Fair Market Evaluation">
@@ -361,7 +361,7 @@
                             </div>
                             <!-- Trade In & Upgrade -->
                             <div class="col-lg-4 mb-lg-5 mb-3">
-                                <div class="text-lg-left text-center">
+                                <div class="parts-item text-lg-left text-center">
                                     <div class="mb-4">
                                         <img src="./assets/images/trade/serving.png" class="" alt="Trade In & Upgrade">
                                     </div>
@@ -387,40 +387,44 @@
         <section class="py-lg-5 py-3 request-service-section border-top" id="form-trade-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8">
+                    <div class="col-lg-11 p-lg-0">
                         <div class="text-center mb-lg-5 mb-3">
                             <h2 class="section-title-alt">Start Selling Your Boat</h2>
                         </div>
-                        <form action=javascript:void(0) class="request-service-form">
-                            <div class="row">
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="First Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Last Name">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="request-form-input" placeholder="Email">
-                                </div>
-                                <div class="col-12">
-                                    <input type="tel" class="request-form-input" placeholder="Phone">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input" placeholder="Zip Code">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="request-form-input"
-                                        placeholder="Boat Year Make and Model">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="request-form-input" rows="1"
-                                        placeholder="Additional Comments"></textarea>
-                                </div>
-                                <div class="col-12 text-center mt-3">
-                                    <button type="submit" class="btn-global border-0">Send Request</button>
-                                </div>
+                        <div class="row justify-content-center">
+                            <div class="col-lg-6">
+                                <form action=javascript:void(0) class="request-service-form">
+                                    <div class="row px-lg-3">
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="First Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Last Name">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="email" class="request-form-input" placeholder="Email">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="tel" class="request-form-input" placeholder="Phone">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input" placeholder="Zip Code">
+                                        </div>
+                                        <div class="col-12">
+                                            <input type="text" class="request-form-input"
+                                                placeholder="Boat Year Make and Model">
+                                        </div>
+                                        <div class="col-12">
+                                            <textarea class="request-form-input" rows="1"
+                                                placeholder="Additional Comments"></textarea>
+                                        </div>
+                                        <div class="col-12 text-center mt-3">
+                                            <button type="submit" class="btn-global border-0">Send Request</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
