--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
     <main>
 
         <!-- About Section Start -->
-        <section class="about-section my-lg-5 my-3 ">
+        <section class="about-section my-lg-5 my-3 py-lg-3">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
@@ -497,7 +497,7 @@
         <!-- Our Inventory Section End -->
 
         <!-- Our Service Center Section Start -->
-        <section class="about-section my-lg-5 my-3 ">
+        <section class="about-section my-lg-5 my-3 py-lg-5 py-3">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 order-lg-1 order-2">
