--- a/specials.html
+++ b/specials.html
@@ -275,12 +275,12 @@
 
     <main>
         <!-- Services Provided Section Start -->
-        <section class="py-lg-5 py-3 specials-section">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-lg-10">
+        <section class="pb-lg-5 pb-3 specials-section">
+            <div class="">
+                <div class="row justify-content-center m-0">
+                    <div class="container-starboard">
 
-                        <div class="text-center mb-lg-5 mb-3">
+                        <div class="text-center my-lg-5 my-3">
                             <h1 class="section-title">Factory Promotions</h1>
                         </div>
                         <div class="row">
